k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kryptic-journal
  labels:
    name: kryptic-journal
